# computer-and-peripheral-devices

./: .gitignore  README.md  lab1_o2  lab1_og  lab1_os  main.cpp
Lab1-Optimizations/: Pract1_Balashov_21206.docx  lab1  lab1_o0  lab1_o1  lab1_o3  lab1_ofast
Lab2-Assembler/: Lab2-folder-file.init  Oformlenie_pract.doc  Pract2_Balashov_21206.docx  Pract2_Balashov_21206_temp.docx  asm_o0.txt  asm_o0_listed.txt  asm_o3.txt  asm_o3_listed.txt  asm_steps.xlsx  cpp.txt  zadan_comment_pract3_OpenCV_libusb.doc  zadan_pract2.doc
Lab3-OpenCV/: CMakeLists.txt  OCV-commands  Pract3_Balashov_21206.docx  executable  libusb_out.txt  main.cpp  pract_template.doc  usb.cpp
Lab4-Vertorization/: 5700u features  5700u features.txt  BLAS_Optimized.cpp  CMakeLists.txt  ManualOpt  ManualOptimized.cpp  Native  Native.cpp  Pract4_Balashov_21206.docx  exe  zadan_comment_pract_vectorization.doc
Lab5-Cash/: CMakeLists.txt  Direct.cpp  Function__GenerateArray.h  GeneratePermutation.cpp  GeneratePermutationLineal.cpp  Lab5-Data.rar  Pract5_Balashov_21206.docx  Random.cpp  Reverse.cpp  buf.h  zadan_comment_pract5.doc
Lab6-Associate/: CMakeCache.txt  CMakeLists.txt  Lab6 Data.rar  Lab6 Data_old.rar  Lab6_Associate  Makefile  MulMatrices.h  Pract6_Balashov_21206.docx  balli_EVMPU_2022.xls  cmake_install.cmake  main.cpp  output.txt  zadan_comment_pract6_associativnost.doc
